Starts the header section.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,39 @@
 <html lang="en" dir="ltr">
   <head>
     <title>Colmar Academy</title>
-    <link href="reset.css" type="text/css" rel="stylsheet">
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="Resources/CSS/reset.css" type="text/css" rel="stylesheet">
+    <link href="Resources/CSS/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+
+    <!--HEADER SECTION-->
+    <header>
+      <div class="header">
+        <img id="logo" src="Resources/Images/ic-logo.svg">
+        <div id="title">
+          <span>COLMAR</span>
+          <span>ACADEMY</span>
+        </div>
+          <nav>
+            <ul>
+              <li class-"item"><a href="#">On Campus</a></li>
+              <li class-"item"><a href="#">Online</a></li>
+              <li class-"item"><a href="#">For Companies</a></li>
+              <li class-"item"><a href="#">Sign In</a></li>
+            </ul>
+          </nav>
+      </div>
+    </header>
+
+    <!--LEARN SECTION-->
+    <div class="learn section">
+      <div class="learn banner">
+        <img src="Resources/Images/banner.jpg">
+      </div>
+      <div>
+      </div>
+    </div>
+
 
   </body>
 </html>
