Completes first section of web page content.

--- a/index.html
+++ b/index.html
@@ -9,32 +9,37 @@
 
     <!--HEADER SECTION-->
     <header>
-      <div class="header">
+      <div class="header section">
         <img id="logo" src="Resources/Images/ic-logo.svg">
         <div id="title">
           <span>COLMAR</span>
           <span>ACADEMY</span>
         </div>
-          <nav>
-            <ul>
-              <li class-"item"><a href="#">On Campus</a></li>
-              <li class-"item"><a href="#">Online</a></li>
-              <li class-"item"><a href="#">For Companies</a></li>
-              <li class-"item"><a href="#">Sign In</a></li>
-            </ul>
-          </nav>
+        <nav>
+          <ul>
+            <li class-"item"><a href="#">On Campus</a></li>
+            <li class-"item"><a href="#">Online</a></li>
+            <li class-"item"><a href="#">For Companies</a></li>
+            <li class-"item"><a href="#">Sign In</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
 
     <!--LEARN SECTION-->
+
     <div class="learn section">
       <div class="learn banner">
         <img src="Resources/Images/banner.jpg">
       </div>
-      <div>
+      <div id="learn-container">
+        <div class="learn content">
+          <h1>Learn something new everyday</h1>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+          <button class="button" type="button">Start here</button>
+        </div>
       </div>
     </div>
-
-
+    
   </body>
 </html>
