--- a/index.html
+++ b/index.html
@@ -29,17 +29,60 @@
     <!--LEARN SECTION-->
 
     <div class="learn section">
-      <div class="learn banner">
+      <div class="banner">
         <img src="Resources/Images/banner.jpg">
       </div>
-      <div id="learn-container">
-        <div class="learn content">
+      <div class="supporting">
+        <div class="content">
           <h1>Learn something new everyday</h1>
           <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
           <button class="button" type="button">Start here</button>
         </div>
       </div>
     </div>
-    
+
+    <!--CAMPUS SECTION-->
+    <div class="campus section">
+      <div class="banner content">
+        <img src="Resources/Images/information-main.jpg">
+        <h1>It doesn't hurt to keep practicing</h1>
+        <span class="quote">"Curacbitur bitae libero in ipsum porttitor consequat. Aliquam
+          et commodo lectus, nec consequat neque. Sed non accumsan urna.
+          Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur
+          dolor consequat, tristique ligula."</span>
+        <span class="source">Emanuel, Sr Strategist at Hiring.com</span>
+      </div>
+      <div class="supporting">
+        <div id="panels-container">
+          <div class="panel">
+            <div>
+              <img src="Resources/Images/information-orientation.jpg">
+            </div>
+            <div>
+              <h3>Orientaion date</h3>
+              <span>Tue 10/11 & Wed 10/12: 8am-3pm</span>
+              <span><a href="#">Read more</a></span>
+            </div>
+          </div>
+          <div class="panel">
+            <div>
+              <img src="Resources/Images/information-campus.jpg">
+            </div>
+            <div>
+              <h3>Our campus</h3>
+              <span><a href="#">Read more</a></span>
+            </div>
+          </div>
+          <div class="panel">
+            <div>
+              <img src="Resources/Images/information-guest-lecture.jpg">
+            </div>
+            <div>
+              <h3>Our guest lecture</h3>
+              <span><a href="#">Read more</a></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
-</html>
