--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     <!--LEARN SECTION-->
 
     <div class="learn section">
+
       <div class="banner">
         <img src="Resources/Images/banner.jpg">
       </div>
+
       <div class="supporting">
         <div class="content">
           <h1>Learn something new everyday</h1>
@@ -39,10 +41,14 @@
           <button class="button" type="button">Start here</button>
         </div>
       </div>
+
     </div>
+    <!--END LEARN SECTION-->
+
 
     <!--CAMPUS SECTION-->
     <div class="campus section">
+
       <div class="banner content">
         <img src="Resources/Images/information-main.jpg">
         <h1>It doesn't hurt to keep practicing</h1>
@@ -52,37 +58,41 @@
           dolor consequat, tristique ligula."</span>
         <span class="source">Emanuel, Sr Strategist at Hiring.com</span>
       </div>
+
       <div class="supporting">
-        <div id="panels-container">
-          <div class="panel">
-            <div>
-              <img src="Resources/Images/information-orientation.jpg">
-            </div>
-            <div>
-              <h3>Orientaion date</h3>
-              <span>Tue 10/11 & Wed 10/12: 8am-3pm</span>
-              <span><a href="#">Read more</a></span>
-            </div>
+        <div class="panel">
+          <div>
+            <img src="Resources/Images/information-orientation.jpg">
           </div>
-          <div class="panel">
-            <div>
-              <img src="Resources/Images/information-campus.jpg">
-            </div>
-            <div>
-              <h3>Our campus</h3>
-              <span><a href="#">Read more</a></span>
-            </div>
+          <div>
+            <h3>Orientation date</h3>
+            <span>Tue 10/11 & Wed 10/12: 8am-3pm</span>
+            <span><a class="link" href="#">Read more</a></span>
           </div>
-          <div class="panel">
-            <div>
-              <img src="Resources/Images/information-guest-lecture.jpg">
-            </div>
-            <div>
-              <h3>Our guest lecture</h3>
-              <span><a href="#">Read more</a></span>
-            </div>
+        </div>
+        <div class="panel">
+          <div>
+            <img src="Resources/Images/information-campus.jpg">
+          </div>
+          <div>
+            <h3>Our campus</h3>
+            <span>Find which campus is close to you</span>
+            <span><a class="link" href="#">Read more</a></span>
+          </div>
+        </div>
+        <div class="panel">
+          <div>
+            <img src="Resources/Images/information-guest-lecture.jpg">
+          </div>
+          <div>
+            <h3>Our guest lecture</h3>
+            <span>Join a keynote with Oliver Sack</span>
+            <span><a class="link" href="#">Read more</a></span>
           </div>
         </div>
       </div>
+
     </div>
+    <!--END CAMPUS SECTION-->
+
   </body>
