Completes courses section. The palette is now included in a text document.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
     <!--HEADER SECTION-->
     <header>
-      <div class="header section">
+      <div id="header" class="section">
         <img id="logo" src="Resources/Images/ic-logo.svg">
         <div id="title">
-          <span>COLMAR</span>
-          <span>ACADEMY</span>
+          <p>COLMAR</p>
+          <p>ACADEMY</p>
         </div>
         <nav>
           <ul>
@@ -28,7 +28,7 @@
 
     <!--LEARN SECTION-->
 
-    <div class="learn section">
+    <div id="learn" class="section">
 
       <div class="banner">
         <img src="Resources/Images/banner.jpg">
@@ -37,7 +37,7 @@
       <div class="supporting">
         <div class="content">
           <h1>Learn something new everyday</h1>
-          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           <button class="button" type="button">Start here</button>
         </div>
       </div>
@@ -47,16 +47,16 @@
 
 
     <!--CAMPUS SECTION-->
-    <div class="campus section">
+    <div id="campus" class="section">
 
       <div class="banner content">
         <img src="Resources/Images/information-main.jpg">
         <h1>It doesn't hurt to keep practicing</h1>
-        <span class="quote">"Curacbitur bitae libero in ipsum porttitor consequat. Aliquam
+        <p class="quote">"Curacbitur bitae libero in ipsum porttitor consequat. Aliquam
           et commodo lectus, nec consequat neque. Sed non accumsan urna.
           Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur
-          dolor consequat, tristique ligula."</span>
-        <span class="source">Emanuel, Sr Strategist at Hiring.com</span>
+          dolor consequat, tristique ligula."</p>
+        <p class="source">Emanuel, Sr Strategist at Hiring.com</p>
       </div>
 
       <div class="supporting">
@@ -66,8 +66,8 @@
           </div>
           <div>
             <h3>Orientation date</h3>
-            <span>Tue 10/11 & Wed 10/12: 8am-3pm</span>
-            <span><a class="link" href="#">Read more</a></span>
+            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <p><a class="link" href="#">Read more</a></p>
           </div>
         </div>
         <div class="panel">
@@ -76,8 +76,8 @@
           </div>
           <div>
             <h3>Our campus</h3>
-            <span>Find which campus is close to you</span>
-            <span><a class="link" href="#">Read more</a></span>
+            <p>Find which campus is close to you</p>
+            <p><a class="link" href="#">Read more</a></p>
           </div>
         </div>
         <div class="panel">
@@ -86,13 +86,89 @@
           </div>
           <div>
             <h3>Our guest lecture</h3>
-            <span>Join a keynote with Oliver Sack</span>
-            <span><a class="link" href="#">Read more</a></span>
+            <p>Join a keynote with Oliver Sack</p>
+            <p><a class="link" href="#">Read more</a></p>
           </div>
         </div>
       </div>
 
     </div>
     <!--END CAMPUS SECTION-->
+
+
+    <!--BEGIN COURSES SECTION-->
+    <div id="courses" class="section">
+      <div id="heading">
+        <h2>Start learning</h2>
+      </div>
+      <div class="row">
+      <div class="course">
+        <div>
+          <img src="Resources/Images/course-software.jpg">
+        </div>
+        <div class="description">
+          <h3>Software engineering</h3>
+          <p>COURSES</p>
+          <p>Web Development, Mobile Developmnent, iOT, APIs</p>
+        </div>
+      </div>
+      <div class="course">
+        <div>
+          <img src="Resources/Images/course-computer-art.jpg">
+        </div>
+        <div class="description">
+          <h3>Computer Art</h3>
+          <p>COURSES</p>
+          <p>Imaging & Design, Web Design,
+          Motion Graphics & Visual Effects, Computer Animation</p>
+        </div>
+      </div>
+      <div class="course">
+        <div>
+          <img src="Resources/Images/course-design.jpg">
+        </div>
+        <div class="description">
+          <h3>Design</h3>
+          <p>COURSES</p>
+          <p>User Experience Design, User Research, Visual Design</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="course">
+        <div>
+          <img src="Resources/Images/course-data.jpg">
+        </div>
+        <div class="description">
+          <h3>Data</h3>
+          <p>COURSES</p>
+          <p>Data Science, Big Data, SQL, Data Visualization</p>
+        </div>
+      </div>
+      <div class="course">
+        <div>
+          <img src="Resources/Images/course-business.jpg">
+        </div>
+        <div class="description">
+          <h3>Business</h3>
+          <p>COURSES</p>
+          <p>Product Development, Business Development, Startup</p>
+        </div>
+      </div>
+      <div class="course">
+        <div>
+          <img src="Resources/Images/course-marketing.jpg">
+        </div>
+        <div class="description">
+          <h3>Marketing</h3>
+          <p>COURSES</p>
+          <p>Analytics, Content Marketing, Mobile Marketing</p>
+        </div>
+      </div>
+    </div>
+
+    </div>
+
+
 
   </body>
