Begins adding transitions to desktop version.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
         <div class="content">
           <h1>Learn something new everyday</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <button class="button" type="button">Start here</button>
+          <div class="button" role="button">
+            <a href="#">Start here</a>
+          </div>
+
         </div>
       </div>
 
@@ -222,5 +225,15 @@
 
 
     <!-- FOOTER -->
+
+    <footer>
+      <div id="footer" class="section">
+        <p>&copy 2018 Colmar Academy. All rights reserved</p>
+        <div id=terms-privacy>
+          <p><a href="#">Terms</a></p>
+          <p><a href="#">Privacy</a></p>
+        </div>
+      </div>
+    </footer>
 
   </body>
