--- a/index.html
+++ b/index.html
@@ -16,12 +16,19 @@
           <p>COLMAR</p>
           <p>ACADEMY</p>
         </div>
-        <nav>
+        <nav id=desktop-menu>
           <ul>
             <li class-"item"><a href="#">On Campus</a></li>
             <li class-"item"><a href="#">Online</a></li>
             <li class-"item"><a href="#">For Companies</a></li>
             <li class-"item"><a href="#">Sign In</a></li>
+          </ul>
+        </nav>
+        <nav id=mobile-menu>
+          <ul>
+            <li><a href="#"><img src="Resources/images/ic-on-campus.svg"></a></li>
+            <li><a href="#"><img src="Resources/images/ic-online.svg"></a></li>
+            <li><a href="#"><img src="Resources/images/ic-login.svg"></a></li>
           </ul>
         </nav>
       </div>
@@ -68,7 +75,8 @@
       <div class="supporting">
         <div class="panel">
           <div>
-            <img src="Resources/images/information-orientation.jpg">
+            <img class="desktop-image" src="Resources/images/information-orientation.jpg">
+            <img class="mobile-image" src="Resources/images/information-orientation-mobile.jpg">
           </div>
           <div>
             <h3>Orientation date</h3>
@@ -78,7 +86,8 @@
         </div>
         <div class="panel">
           <div>
-            <img src="Resources/images/information-campus.jpg">
+            <img class="desktop-image" src="Resources/images/information-campus.jpg">
+            <img class="mobile-image" src="Resources/images/information-campus-mobile.jpg">
           </div>
           <div>
             <h3>Our campus</h3>
@@ -88,7 +97,8 @@
         </div>
         <div class="panel">
           <div>
-            <img src="Resources/images/information-guest-lecture.jpg">
+            <img class="desktop-image" src="Resources/images/information-guest-lecture.jpg">
+            <img class="mobile-image" src="Resources/images/information-guest-lecture-mobile.jpg">
           </div>
           <div>
             <h3>Our guest lecture</h3>
