--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Colmar Academy</title>
     <link href="Resources/CSS/reset.css" type="text/css" rel="stylesheet">
     <link href="Resources/CSS/style.css" type="text/css" rel="stylesheet">
+    <link rel="icon" href="Resources/images/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
