--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
     <!--HEADER SECTION-->
     <header>
       <div id="header" class="section">
-        <img id="logo" src="Resources/images/ic-logo.svg">
+        <img id="logo" src="Resources/images/ic-logo.svg" alt="School logo">
         <div id="title">
           <p>COLMAR</p>
           <p>ACADEMY</p>
         </div>
         <nav id=desktop-menu>
-          <ul>
-            <li class-"item"><a href="#">On Campus</a></li>
-            <li class-"item"><a href="#">Online</a></li>
-            <li class-"item"><a href="#">For Companies</a></li>
-            <li class-"item"><a href="#">Sign In</a></li>
+          <ul role="presentation">
+            <li class-"item"><a href="#" alt="Top of page">On Campus</a></li>
+            <li class-"item"><a href="#" alt="Top of page">Online</a></li>
+            <li class-"item"><a href="#" alt="Top of page">For Companies</a></li>
+            <li class-"item"><a href="#" alt="Top of page">Sign In</a></li>
           </ul>
         </nav>
         <nav id=mobile-menu>
-          <ul>
-            <li><a href="#"><img src="Resources/images/ic-on-campus.svg"></a></li>
-            <li><a href="#"><img src="Resources/images/ic-online.svg"></a></li>
-            <li><a href="#"><img src="Resources/images/ic-login.svg"></a></li>
+          <ul role="presentation">
+            <li><a href="#" alt="Top of page"><img src="Resources/images/ic-on-campus.svg"></a></li>
+            <li><a href="#" alt="Top of page"><img src="Resources/images/ic-online.svg"></a></li>
+            <li><a href="#" alt="Top of page"><img src="Resources/images/ic-login.svg"></a></li>
           </ul>
         </nav>
       </div>
@@ -40,15 +40,15 @@
     <div id="learn" class="section">
 
       <div class="banner">
-        <img src="Resources/images/banner.jpg">
+        <img src="Resources/images/banner.jpg" alt="three students studying at a picnic table">
       </div>
 
       <div class="supporting">
         <div class="content">
-          <h1>Learn something new everyday</h1>
+          <h1 role="heading">Learn something new everyday</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           <div class="button" role="button">
-            <a href="#">Start here</a>
+            <a href="#" alt="Top of page">Start here</a>
           </div>
 
         </div>
@@ -62,8 +62,8 @@
     <div id="campus" class="section">
 
       <div class="banner content">
-        <img src="Resources/images/information-main.jpg">
-        <div class="heading">
+        <img src="Resources/images/information-main.jpg" alt="man reading a book">
+        <div class="heading" role="heading">
           <h2>It doesn't hurt to keep practicing</h2>
         </div>
         <p class="quote">"Curacbitur bitae libero in ipsum porttitor consequat. Aliquam
@@ -76,35 +76,35 @@
       <div class="supporting">
         <div class="panel">
           <div>
-            <img class="desktop-image" src="Resources/images/information-orientation.jpg">
-            <img class="mobile-image" src="Resources/images/information-orientation-mobile.jpg">
+            <img class="desktop-image" src="Resources/images/information-orientation.jpg" alt="">
+            <img class="mobile-image" src="Resources/images/information-orientation-mobile.jpg" alt="">
           </div>
           <div>
             <h3>Orientation date</h3>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <p><a class="link" href="#">Read more</a></p>
+            <p><a class="link" href="#" alt="Top of page">Read more</a></p>
           </div>
         </div>
         <div class="panel">
           <div>
-            <img class="desktop-image" src="Resources/images/information-campus.jpg">
-            <img class="mobile-image" src="Resources/images/information-campus-mobile.jpg">
+            <img class="desktop-image" src="Resources/images/information-campus.jpg" alt="">
+            <img class="mobile-image" src="Resources/images/information-campus-mobile.jpg" alt="">
           </div>
           <div>
             <h3>Our campus</h3>
             <p>Find which campus is close to you</p>
-            <p><a class="link" href="#">Read more</a></p>
+            <p><a class="link" href="#" alt="Top of page">Read more</a></p>
           </div>
         </div>
         <div class="panel">
           <div>
-            <img class="desktop-image" src="Resources/images/information-guest-lecture.jpg">
-            <img class="mobile-image" src="Resources/images/information-guest-lecture-mobile.jpg">
+            <img class="desktop-image" src="Resources/images/information-guest-lecture.jpg" alt="">
+            <img class="mobile-image" src="Resources/images/information-guest-lecture-mobile.jpg" alt="">
           </div>
           <div>
             <h3>Our guest lecture</h3>
             <p>Join a keynote with Oliver Sack</p>
-            <p><a class="link" href="#">Read more</a></p>
+            <p><a class="link" href="#" alt="Top of page">Read more</a></p>
           </div>
         </div>
       </div>
@@ -116,14 +116,14 @@
     <!--BEGIN COURSES SECTION-->
     <div id="courses" class="section">
 
-      <div class="heading">
+      <div class="heading" role="heading">
         <h2>Start learning</h2>
       </div>
 
       <div class="row">
         <div class="course">
           <div>
-            <img src="Resources/images/course-software.jpg">
+            <img src="Resources/images/course-software.jpg" alt="">
           </div>
           <div class="description">
             <h3>Software engineering</h3>
@@ -133,7 +133,7 @@
         </div>
         <div class="course">
           <div>
-            <img src="Resources/images/course-computer-art.jpg">
+            <img src="Resources/images/course-computer-art.jpg" alt="">
           </div>
           <div class="description">
             <h3>Computer Art</h3>
@@ -144,7 +144,7 @@
         </div>
         <div class="course">
           <div>
-            <img src="Resources/images/course-design.jpg">
+            <img src="Resources/images/course-design.jpg" alt="">
           </div>
           <div class="description">
             <h3>Design</h3>
@@ -157,7 +157,7 @@
       <div class="row">
         <div class="course">
           <div>
-            <img src="Resources/images/course-data.jpg">
+            <img src="Resources/images/course-data.jpg" alt="">
           </div>
           <div class="description">
             <h3>Data</h3>
@@ -167,7 +167,7 @@
         </div>
         <div class="course">
           <div>
-            <img src="Resources/images/course-business.jpg">
+            <img src="Resources/images/course-business.jpg" alt="">
           </div>
           <div class="description">
             <h3>Business</h3>
@@ -177,7 +177,7 @@
         </div>
         <div class="course">
           <div>
-            <img src="Resources/images/course-marketing.jpg">
+            <img src="Resources/images/course-marketing.jpg" alt="">
           </div>
           <div class="description">
             <h3>Marketing</h3>
@@ -193,14 +193,14 @@
     <!--BEGIN THESIS SECTION-->
     <div id="thesis" class="section">
 
-      <div class="heading">
+      <div class="heading" role="heading">
         <h2>Thesis exhibit</h2>
       </div>
 
       <div id="content-container">
         <div class="banner content">
-          <video src="Resources/videos/thesis.mp4" controls></video>
-          <div class="heading">
+          <video src="Resources/videos/thesis.mp4" controls alt="digital timelapse of a building from sunrise to sunset"></video>
+          <div class="heading" role="heading">
             <h2>Reimagine urban</h2>
           </div>
           <p class="quote">"Curacbitur vitae libero in ipsum porttitor consequat. Aliquam
@@ -213,7 +213,7 @@
         <div class="supporting">
           <div class="panel">
             <div>
-              <img src="Resources/images/thesis-fisma.jpg">
+              <img src="Resources/images/thesis-fisma.jpg" alt="">
             </div>
             <div>
               <h3>Fisma: Design and Prototype</h3>
@@ -222,7 +222,7 @@
           </div>
           <div class="panel">
             <div>
-              <img src="Resources/images/thesis-now-and-then.jpg">
+              <img src="Resources/images/thesis-now-and-then.jpg" alt="">
             </div>
             <div>
               <h3>Now and then</h3>
@@ -241,8 +241,8 @@
       <div id="footer" class="section">
         <p>&copy 2018 Colmar Academy. All rights reserved</p>
         <div id=terms-privacy>
-          <p><a href="#">Terms</a></p>
-          <p><a href="#">Privacy</a></p>
+          <p><a href="#" alt="Top of page">Terms</a></p>
+          <p><a href="#" alt="Top of page">Privacy</a></p>
         </div>
       </div>
     </footer>
